--- a/AIML_Module_02_Lab_01_Basic_Plots.ipynb
+++ b/AIML_Module_02_Lab_01_Basic_Plots.ipynb
@@ -1071,6 +1071,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Answer**: Maximum prices suggest convertibles are the most expensive/ Body style can be a decent indicator of price trends but not a definitive predictor. Other factors play a crucial role in determining the actual cost of a car."
+      ],
+      "metadata": {
+        "id": "2v_WX3FkyKTA"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
