--- a/AIML_May_2025_Module_2_Lab_1_Manifold_Learning_Methods.ipynb
+++ b/AIML_May_2025_Module_2_Lab_1_Manifold_Learning_Methods.ipynb
@@ -830,6 +830,26 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. The number of neighbors (k) is a crucial parameter in Isomap. It determines the connectivity of the neighborhood graph and influences the estimation of geodesic distances.\n",
+        "When k is very large (approaching the total number of data points), the neighborhood graph becomes densely connected.\n",
+        "When k is very small, the neighborhood graph becomes sparsely connected.\n",
+        "\n",
+        "2. Isomap is generally superior to PCA when the data lies on a non-linear manifold. This means that the data has an intrinsic low-dimensional structure that is not captured by linear projections.\n",
+        "\n",
+        "3. Besides Isomap, another popular manifold learning method is Locally Linear Embedding (LLE). LLE is a non-linear dimensionality reduction technique that aims to preserve the local neighborhood structure of the data.  Isomap is better at capturing global structure and is less sensitive to noise, while LLE is computationally more efficient and can handle more complex manifold shapes.\n",
+        "\n",
+        "   4.\n",
+        "*   Data Imputation\n",
+        "*   Missing Data Estimation within the Manifold Learning Algorithm\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "nXfHFp8CziFN"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "kgbWhSAZOD-0"
       },
