--- a/AIML_Module_02_Lab_01_Basic_Plots.ipynb
+++ b/AIML_Module_02_Lab_01_Basic_Plots.ipynb
@@ -1140,6 +1140,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. Violin plot and box plot\n",
+        "\n",
+        "2. sns.stripplot()"
+      ],
+      "metadata": {
+        "id": "34bZf2e40wYj"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "HRrFq1p06APU"
       },
